--- a/notebooks_glmsingle/extract_data.ipynb
+++ b/notebooks_glmsingle/extract_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0e08fef6",
    "metadata": {},
    "outputs": [],
@@ -63,12 +63,243 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "740f3c75",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n",
+      "101\n",
+      "102\n",
+      "103\n",
+      "104\n",
+      "106\n",
+      "107\n",
+      "108\n",
+      "109\n",
+      "110\n",
+      "111\n",
+      "112\n",
+      "113\n",
+      "114\n",
+      "115\n"
+     ]
+    }
+   ],
    "source": [
-    "glm = 'single'\n",
+    "glm = 'single_jul30'\n",
     "region_labels = [1, 2, 3, 4, 5, 6, 7, 8]\n",
     "region_names = ['S1', 'M1', 'PMd', 'PMv', 'SMA', 'V1', 'SPLa', 'SPLp']\n",
     "sn_list = [101,102,103,104,106,107,108,109,110,111,112,113,114,115]\n",
@@ -161,7 +392,9 @@
     "\n",
     "            # Convert conditions vector to numbers\n",
     "            cond_num_vec.append(np.array([extrinsic_to_number[cond] for cond in conds]))\n",
-    "            \n",
+    "\n",
+    "            print(f'{region_names[k]}, hem{h}, s{sn}')\n",
+    "\n",
     "        # save the data of hem and region:\n",
     "        # Convert to object array to handle different shapes\n",
     "        data_obj = np.empty(len(data), dtype=object)\n",
@@ -174,7 +407,8 @@
     "                  cond_intrinsic_vec=cond_intrinsic_vec,\n",
     "                  cond_num_vec=cond_num_vec,\n",
     "                  part_vec=part_vec,\n",
-    "                  subject=subject)\n"
+    "                  subject=subject)\n",
+    "\n"
    ]
   }
  ],
