--- a/notebooks_mri/extract_data.ipynb
+++ b/notebooks_mri/extract_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "0e08fef6",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "740f3c75",
    "metadata": {},
    "outputs": [],
@@ -179,7 +179,8 @@
     "                  cond_intrinsic_vec=cond_intrinsic_vec,\n",
     "                  cond_num_vec=cond_num_vec,\n",
     "                  part_vec=part_vec,\n",
-    "                  subject=subject)\n"
+    "                  subject=subject)\n",
+    "\n"
    ]
   }
  ],
