--- a/notebooks_glmsingle/extract_data.ipynb
+++ b/notebooks_glmsingle/extract_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0e08fef6",
    "metadata": {},
    "outputs": [],
@@ -71,235 +71,235 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n",
-      "101\n",
-      "102\n",
-      "103\n",
-      "104\n",
-      "106\n",
-      "107\n",
-      "108\n",
-      "109\n",
-      "110\n",
-      "111\n",
-      "112\n",
-      "113\n",
-      "114\n",
-      "115\n"
+      "S1, hemL, s101\n",
+      "S1, hemL, s102\n",
+      "S1, hemL, s103\n",
+      "S1, hemL, s104\n",
+      "S1, hemL, s106\n",
+      "S1, hemL, s107\n",
+      "S1, hemL, s108\n",
+      "S1, hemL, s109\n",
+      "S1, hemL, s110\n",
+      "S1, hemL, s111\n",
+      "S1, hemL, s112\n",
+      "S1, hemL, s113\n",
+      "S1, hemL, s114\n",
+      "S1, hemL, s115\n",
+      "S1, hemR, s101\n",
+      "S1, hemR, s102\n",
+      "S1, hemR, s103\n",
+      "S1, hemR, s104\n",
+      "S1, hemR, s106\n",
+      "S1, hemR, s107\n",
+      "S1, hemR, s108\n",
+      "S1, hemR, s109\n",
+      "S1, hemR, s110\n",
+      "S1, hemR, s111\n",
+      "S1, hemR, s112\n",
+      "S1, hemR, s113\n",
+      "S1, hemR, s114\n",
+      "S1, hemR, s115\n",
+      "M1, hemL, s101\n",
+      "M1, hemL, s102\n",
+      "M1, hemL, s103\n",
+      "M1, hemL, s104\n",
+      "M1, hemL, s106\n",
+      "M1, hemL, s107\n",
+      "M1, hemL, s108\n",
+      "M1, hemL, s109\n",
+      "M1, hemL, s110\n",
+      "M1, hemL, s111\n",
+      "M1, hemL, s112\n",
+      "M1, hemL, s113\n",
+      "M1, hemL, s114\n",
+      "M1, hemL, s115\n",
+      "M1, hemR, s101\n",
+      "M1, hemR, s102\n",
+      "M1, hemR, s103\n",
+      "M1, hemR, s104\n",
+      "M1, hemR, s106\n",
+      "M1, hemR, s107\n",
+      "M1, hemR, s108\n",
+      "M1, hemR, s109\n",
+      "M1, hemR, s110\n",
+      "M1, hemR, s111\n",
+      "M1, hemR, s112\n",
+      "M1, hemR, s113\n",
+      "M1, hemR, s114\n",
+      "M1, hemR, s115\n",
+      "PMd, hemL, s101\n",
+      "PMd, hemL, s102\n",
+      "PMd, hemL, s103\n",
+      "PMd, hemL, s104\n",
+      "PMd, hemL, s106\n",
+      "PMd, hemL, s107\n",
+      "PMd, hemL, s108\n",
+      "PMd, hemL, s109\n",
+      "PMd, hemL, s110\n",
+      "PMd, hemL, s111\n",
+      "PMd, hemL, s112\n",
+      "PMd, hemL, s113\n",
+      "PMd, hemL, s114\n",
+      "PMd, hemL, s115\n",
+      "PMd, hemR, s101\n",
+      "PMd, hemR, s102\n",
+      "PMd, hemR, s103\n",
+      "PMd, hemR, s104\n",
+      "PMd, hemR, s106\n",
+      "PMd, hemR, s107\n",
+      "PMd, hemR, s108\n",
+      "PMd, hemR, s109\n",
+      "PMd, hemR, s110\n",
+      "PMd, hemR, s111\n",
+      "PMd, hemR, s112\n",
+      "PMd, hemR, s113\n",
+      "PMd, hemR, s114\n",
+      "PMd, hemR, s115\n",
+      "PMv, hemL, s101\n",
+      "PMv, hemL, s102\n",
+      "PMv, hemL, s103\n",
+      "PMv, hemL, s104\n",
+      "PMv, hemL, s106\n",
+      "PMv, hemL, s107\n",
+      "PMv, hemL, s108\n",
+      "PMv, hemL, s109\n",
+      "PMv, hemL, s110\n",
+      "PMv, hemL, s111\n",
+      "PMv, hemL, s112\n",
+      "PMv, hemL, s113\n",
+      "PMv, hemL, s114\n",
+      "PMv, hemL, s115\n",
+      "PMv, hemR, s101\n",
+      "PMv, hemR, s102\n",
+      "PMv, hemR, s103\n",
+      "PMv, hemR, s104\n",
+      "PMv, hemR, s106\n",
+      "PMv, hemR, s107\n",
+      "PMv, hemR, s108\n",
+      "PMv, hemR, s109\n",
+      "PMv, hemR, s110\n",
+      "PMv, hemR, s111\n",
+      "PMv, hemR, s112\n",
+      "PMv, hemR, s113\n",
+      "PMv, hemR, s114\n",
+      "PMv, hemR, s115\n",
+      "SMA, hemL, s101\n",
+      "SMA, hemL, s102\n",
+      "SMA, hemL, s103\n",
+      "SMA, hemL, s104\n",
+      "SMA, hemL, s106\n",
+      "SMA, hemL, s107\n",
+      "SMA, hemL, s108\n",
+      "SMA, hemL, s109\n",
+      "SMA, hemL, s110\n",
+      "SMA, hemL, s111\n",
+      "SMA, hemL, s112\n",
+      "SMA, hemL, s113\n",
+      "SMA, hemL, s114\n",
+      "SMA, hemL, s115\n",
+      "SMA, hemR, s101\n",
+      "SMA, hemR, s102\n",
+      "SMA, hemR, s103\n",
+      "SMA, hemR, s104\n",
+      "SMA, hemR, s106\n",
+      "SMA, hemR, s107\n",
+      "SMA, hemR, s108\n",
+      "SMA, hemR, s109\n",
+      "SMA, hemR, s110\n",
+      "SMA, hemR, s111\n",
+      "SMA, hemR, s112\n",
+      "SMA, hemR, s113\n",
+      "SMA, hemR, s114\n",
+      "SMA, hemR, s115\n",
+      "V1, hemL, s101\n",
+      "V1, hemL, s102\n",
+      "V1, hemL, s103\n",
+      "V1, hemL, s104\n",
+      "V1, hemL, s106\n",
+      "V1, hemL, s107\n",
+      "V1, hemL, s108\n",
+      "V1, hemL, s109\n",
+      "V1, hemL, s110\n",
+      "V1, hemL, s111\n",
+      "V1, hemL, s112\n",
+      "V1, hemL, s113\n",
+      "V1, hemL, s114\n",
+      "V1, hemL, s115\n",
+      "V1, hemR, s101\n",
+      "V1, hemR, s102\n",
+      "V1, hemR, s103\n",
+      "V1, hemR, s104\n",
+      "V1, hemR, s106\n",
+      "V1, hemR, s107\n",
+      "V1, hemR, s108\n",
+      "V1, hemR, s109\n",
+      "V1, hemR, s110\n",
+      "V1, hemR, s111\n",
+      "V1, hemR, s112\n",
+      "V1, hemR, s113\n",
+      "V1, hemR, s114\n",
+      "V1, hemR, s115\n",
+      "SPLa, hemL, s101\n",
+      "SPLa, hemL, s102\n",
+      "SPLa, hemL, s103\n",
+      "SPLa, hemL, s104\n",
+      "SPLa, hemL, s106\n",
+      "SPLa, hemL, s107\n",
+      "SPLa, hemL, s108\n",
+      "SPLa, hemL, s109\n",
+      "SPLa, hemL, s110\n",
+      "SPLa, hemL, s111\n",
+      "SPLa, hemL, s112\n",
+      "SPLa, hemL, s113\n",
+      "SPLa, hemL, s114\n",
+      "SPLa, hemL, s115\n",
+      "SPLa, hemR, s101\n",
+      "SPLa, hemR, s102\n",
+      "SPLa, hemR, s103\n",
+      "SPLa, hemR, s104\n",
+      "SPLa, hemR, s106\n",
+      "SPLa, hemR, s107\n",
+      "SPLa, hemR, s108\n",
+      "SPLa, hemR, s109\n",
+      "SPLa, hemR, s110\n",
+      "SPLa, hemR, s111\n",
+      "SPLa, hemR, s112\n",
+      "SPLa, hemR, s113\n",
+      "SPLa, hemR, s114\n",
+      "SPLa, hemR, s115\n",
+      "SPLp, hemL, s101\n",
+      "SPLp, hemL, s102\n",
+      "SPLp, hemL, s103\n",
+      "SPLp, hemL, s104\n",
+      "SPLp, hemL, s106\n",
+      "SPLp, hemL, s107\n",
+      "SPLp, hemL, s108\n",
+      "SPLp, hemL, s109\n",
+      "SPLp, hemL, s110\n",
+      "SPLp, hemL, s111\n",
+      "SPLp, hemL, s112\n",
+      "SPLp, hemL, s113\n",
+      "SPLp, hemL, s114\n",
+      "SPLp, hemL, s115\n",
+      "SPLp, hemR, s101\n",
+      "SPLp, hemR, s102\n",
+      "SPLp, hemR, s103\n",
+      "SPLp, hemR, s104\n",
+      "SPLp, hemR, s106\n",
+      "SPLp, hemR, s107\n",
+      "SPLp, hemR, s108\n",
+      "SPLp, hemR, s109\n",
+      "SPLp, hemR, s110\n",
+      "SPLp, hemR, s111\n",
+      "SPLp, hemR, s112\n",
+      "SPLp, hemR, s113\n",
+      "SPLp, hemR, s114\n",
+      "SPLp, hemR, s115\n"
      ]
     }
    ],
    "source": [
-    "glm = 'single_jul30'\n",
+    "glm = 'single'\n",
     "region_labels = [1, 2, 3, 4, 5, 6, 7, 8]\n",
     "region_names = ['S1', 'M1', 'PMd', 'PMv', 'SMA', 'V1', 'SPLa', 'SPLp']\n",
     "sn_list = [101,102,103,104,106,107,108,109,110,111,112,113,114,115]\n",
@@ -381,7 +381,6 @@
     "            # ========================================== \n",
     "            # store the data\n",
     "            # ==========================================\n",
-    "            # select unimanual conditions:\n",
     "            subject.append(sn)\n",
     "            data.append(beta)\n",
     "            cond_extrinsic_vec.append(conds)\n",
