--- a/notebooks_glmsingle/extract_data.ipynb
+++ b/notebooks_glmsingle/extract_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0e08fef6",
    "metadata": {},
    "outputs": [],
@@ -325,25 +325,37 @@
     "                   'bi:extdn_ext',  'bi:extdn_extup', 'bi:extdn_flxup', 'bi:extdn_flx', 'bi:extdn_flxdn', 'bi:extdn_extdn',\n",
     "                   'bi:flxdn_ext',  'bi:flxdn_extup', 'bi:flxdn_flxup', 'bi:flxdn_flx', 'bi:flxdn_flxdn', 'bi:flxdn_extdn']\n",
     "\n",
-    "cond_num = [0, 1, 2, 3, 4, 5,\n",
-    "            9, 8, 7, 6, 11, 10,\n",
-    "            15, 14, 13, 12, 17, 16,\n",
-    "            21, 20, 19, 18, 23, 22,\n",
-    "            27, 26, 25, 24, 29, 28,\n",
-    "            33, 32, 31, 30, 35, 34,\n",
-    "            39, 38, 37, 36, 41, 40,\n",
-    "            45, 44, 43, 42, 47, 46]\n",
+    "cond_num_extrinsic_ordered = [0, 1, 2, 3, 4, 5,\n",
+    "                              9, 8, 7, 6, 11, 10,\n",
+    "                              15, 14, 13, 12, 17, 16,\n",
+    "                              21, 20, 19, 18, 23, 22,\n",
+    "                              27, 26, 25, 24, 29, 28,\n",
+    "                              33, 32, 31, 30, 35, 34,\n",
+    "                              39, 38, 37, 36, 41, 40,\n",
+    "                              45, 44, 43, 42, 47, 46]\n",
+    "\n",
+    "cond_num = [0, 1, 4, 3, 5, 2, \n",
+    "            9, 10, 7, 6, 8, 11,\n",
+    "            15, 16, 13, 12, 14, 17,\n",
+    "            21, 22, 19, 18, 20, 23,\n",
+    "            39, 40, 37, 36, 38, 41,\n",
+    "            33, 34, 31, 30, 32, 35,\n",
+    "            45, 46, 43, 42, 44, 47,\n",
+    "            27, 28, 25, 24, 26, 29]\n",
     "\n",
     "# Create mapping dictionary\n",
     "extrinsic_to_intrinsic = dict(zip(extrinsic_names, intrinsic_names))\n",
     "extrinsic_to_number = dict(zip(extrinsic_names, cond_num))\n",
+    "extrinsic_to_extrinsic_ordered_number = dict(zip(extrinsic_names, cond_num_extrinsic_ordered))\n",
     "\n",
     "for k, r in enumerate(region_labels):\n",
     "    for j, h in enumerate(hem):\n",
-    "        data = []\n",
+    "        beta = []\n",
+    "        beta_white = []\n",
     "        cond_extrinsic_vec = []\n",
     "        cond_intrinsic_vec = []\n",
     "        cond_num_vec = []\n",
+    "        cond_num_vec_extrinsic = []\n",
     "        part_vec = []\n",
     "        subject = []\n",
     "        for i, sn in enumerate(sn_list):\n",
@@ -362,10 +374,11 @@
     "\n",
     "            # File names for data extraction\n",
     "            nii_names = sorted(glob.glob(os.path.join(baseDir, f'glm{glm}', f's{sn}', \"beta_*.nii\")))\n",
+    "            r2_name = [os.path.join(baseDir, f'glm{glm}', f's{sn}', 'R2.nii')]\n",
     "            \n",
-    "            beta = []\n",
-    "            # resMS = []\n",
-    "            # beta_white = []\n",
+    "            beta_tmp = []\n",
+    "            R2 = []\n",
+    "            beta_white_tmp = []\n",
     "            \n",
     "            atlas_tmp = atlas.get_hemisphere(j)\n",
     "            subatlas = atlas_tmp.get_subatlas_image(os.path.join(atlasDir,f'ROI.32k.{h}.label.gii'), value=r)\n",
@@ -374,15 +387,19 @@
     "            amap.build()\n",
     "            \n",
     "            # This extract all the relevant voxels in native space (use for RSA)\n",
-    "            beta = amap.extract_data_native(nii_names)\n",
-    "            idx_nan = np.isnan(beta).any(axis=0)\n",
-    "            beta = beta[:, ~idx_nan]\n",
-    "            \n",
+    "            R2 = amap.extract_data_native(r2_name)/100\n",
+    "            beta_tmp = amap.extract_data_native(nii_names)\n",
+    "            beta_white_tmp = beta_tmp * np.sqrt(R2)\n",
+    "            idx_nan = np.isnan(beta_tmp).any(axis=0)\n",
+    "            beta_tmp = beta_tmp[:, ~idx_nan]\n",
+    "            beta_white_tmp = beta_white_tmp[:, ~idx_nan]\n",
+    "\n",
     "            # ========================================== \n",
     "            # store the data\n",
     "            # ==========================================\n",
     "            subject.append(sn)\n",
-    "            data.append(beta)\n",
+    "            beta.append(beta_tmp)\n",
+    "            beta_white.append(beta_white_tmp)\n",
     "            cond_extrinsic_vec.append(conds)\n",
     "            part_vec.append(partitions)\n",
     "            \n",
@@ -391,20 +408,27 @@
     "\n",
     "            # Convert conditions vector to numbers\n",
     "            cond_num_vec.append(np.array([extrinsic_to_number[cond] for cond in conds]))\n",
+    "            cond_num_vec_extrinsic.append(np.array([extrinsic_to_extrinsic_ordered_number[cond] for cond in conds]))\n",
     "\n",
     "            print(f'{region_names[k]}, hem{h}, s{sn}')\n",
     "\n",
     "        # save the data of hem and region:\n",
     "        # Convert to object array to handle different shapes\n",
-    "        data_obj = np.empty(len(data), dtype=object)\n",
-    "        for i in range(len(data)):\n",
-    "            data_obj[i] = data[i]\n",
+    "        beta_obj = np.empty(len(beta), dtype=object)\n",
+    "        for i in range(len(beta)):\n",
+    "            beta_obj[i] = beta[i]\n",
+    "        # Convert to object array for beta_white\n",
+    "        beta_white_obj = np.empty(len(beta_white), dtype=object)\n",
+    "        for i in range(len(beta_white)):\n",
+    "            beta_white_obj[i] = beta_white[i]\n",
     "\n",
     "        np.savez(os.path.join(analysisDir, f'pwbeta_{region_names[k]}_{h}.npz'), \n",
-    "                  data=data_obj, \n",
+    "                  beta=beta_obj, \n",
+    "                  beta_white=beta_white_obj,\n",
     "                  cond_extrinsic_vec=cond_extrinsic_vec, \n",
     "                  cond_intrinsic_vec=cond_intrinsic_vec,\n",
     "                  cond_num_vec=cond_num_vec,\n",
+    "                  cond_num_vec_extrinsic=cond_num_vec_extrinsic,\n",
     "                  part_vec=part_vec,\n",
     "                  subject=subject)\n",
     "\n"
