--- a/notebooks_glmsingle/tmaps.ipynb
+++ b/notebooks_glmsingle/tmaps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "b5e07f76",
    "metadata": {},
    "outputs": [],
@@ -48,6 +48,208 @@
     "behavDir = 'behavioural'\n",
     "regDir = 'ROI'\n",
     "atlasDir = '/Volumes/diedrichsen_data$/data/Atlas_templates/fs_LR_32'\n",
+    "analysisDir = os.path.join(os.path.dirname(os.path.dirname(baseDir)), 'analysis')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46380db4",
+   "metadata": {},
+   "source": [
+    "# wb view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "603f942a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Info: Resources loaded:\n",
+      "   :/About   :/BalsaUploadDialog   :/Cursor   :/DingOntology   :/Fonts   :/general_resources.qrc   :/help_resources.qrc   :/HelpFiles   :/LayersPanel   :/MessageDialog   :/PaletteEditorDialog   :/PaletteSettings   :/qpdf   :/qt-project.org   :/RecentFilesDialog   :/SceneFileDialog   :/SpecFileDialog   :/Splash   :/ToolBar   :/update_resources.sh\n",
+      "\n",
+      "\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.Lm.flat.surf.gii was 0.021219 seconds.\n",
+      "\n",
+      "\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.flat.surf.gii was 0.021277 seconds.\n",
+      "\n",
+      "\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.LR.sulc.dscalar.nii was 0.022207 seconds.\n",
+      "\n",
+      "\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border was 0.001089 seconds.\n",
+      "\n",
+      "\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii was 0.002295 seconds.\n",
+      "\n",
+      "\n",
+      "Info: Time to read /Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.R.label.gii was 0.00233 seconds.\n",
+      "\n",
+      "\n",
+      "Info: Time to read /Users/aghavamp/Desktop/Projects/bimanual_wrist/analysis/tmaps.dscalar.nii was 0.02759 seconds.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import subprocess\n",
+    "surfPy_dir = '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh'\n",
+    "\n",
+    "# add paths:\n",
+    "paths = []\n",
+    "# add surface files:\n",
+    "paths.append(os.path.abspath(os.path.join(surfPy_dir, f'fs_L', f'fs_LR.32k.Lm.flat.surf.gii')))\n",
+    "paths.append(os.path.abspath(os.path.join(surfPy_dir, f'fs_R', f'fs_LR.32k.R.flat.surf.gii')))\n",
+    "paths.append(os.path.abspath(os.path.join(surfPy_dir, f'fs_L', f'fs_LR.32k.LR.sulc.dscalar.nii')))\n",
+    "paths.append(os.path.abspath(os.path.join(surfPy_dir, f'fs_L', f'fs_LR.32k.L.border')))\n",
+    "\n",
+    "paths.append(os.path.abspath('/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.L.label.gii'))\n",
+    "paths.append(os.path.abspath('/Volumes/Diedrichsen_data$/data/Atlas_templates/fs_LR_32/ROI.32k.R.label.gii'))\n",
+    "\n",
+    "# add tmaps:\n",
+    "paths.append(os.path.abspath(os.path.join(analysisDir, f'tmaps.dscalar.nii')))\n",
+    "\n",
+    "# Run wb_view:\n",
+    "subprocess.run(['wb_view', *paths])\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e8d4201",
+   "metadata": {},
+   "source": [
+    "# surface plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a6f1b3f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d084fb8c",
+   "metadata": {},
+   "source": [
+    "# T-MAP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "51ec8d7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_40086/1556889967.py:65: RuntimeWarning: Mean of empty slice\n",
+      "  mean_data = np.nanmean(condition_data, axis=0, keepdims=True)\n",
+      "/Users/aghavamp/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/numpy/lib/_nanfunctions_impl.py:2019: RuntimeWarning: Degrees of freedom <= 0 for slice.\n",
+      "  var = nanvar(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n"
+     ]
+    }
+   ],
+   "source": [
+    "glm = 'single'\n",
+    "conds = ['lhand', 'rhand', 'bi']\n",
+    "sn_list = [101,102,103,104,106,107,108,109,110,111,112,113,114,115]\n",
+    "\n",
+    "all_data = []\n",
+    "scalar_labels = []\n",
+    "\n",
+    "for sn in sn_list:\n",
+    "    # Define the relevant gifti files for both left and right hemisphere:\n",
+    "    surf_white = [] # White -gray matter surface \n",
+    "    surf_pial = []  # Pial surface\n",
+    "    # surf_sulc = []  # Sulcal depth\n",
+    "    hemN = ['L','R']\n",
+    "    for h,hem in enumerate(hemN):\n",
+    "        surf_white.append(os.path.join(baseDir,surfacewbDir, f's{sn}', f's{sn}.{hem}.white.32k.surf.gii'))\n",
+    "        surf_pial.append(os.path.join(baseDir,surfacewbDir, f's{sn}', f's{sn}.{hem}.pial.32k.surf.gii'))\n",
+    "        # surf_sulc.append(os.path.join(baseDir,surfacewbDir, f's{sn}', f's{sn}.{hem}.sulc.32k.shape.gii'))\n",
+    "\n",
+    "    for cond in conds:\n",
+    "        # regressor info:\n",
+    "        reginfo = pd.read_table(os.path.join(baseDir, f'glm{glm}', f's{sn}', 'reginfo.tsv'))\n",
+    "        # get indices of the regressors of interest:\n",
+    "        regressors_of_interest = reginfo[reginfo.name.str.contains(cond)].index.tolist()\n",
+    "\n",
+    "        datafiles = [os.path.join(baseDir, f'glm{glm}', f's{sn}', f'beta_{i+1:04d}.nii') for i in regressors_of_interest]\n",
+    "        \n",
+    "        # Map a Nifti to the surface of left hemisphere\n",
+    "        DL = surf.map.vol_to_surf(datafiles,surf_pial[0], surf_white[0])\n",
+    "        # Map a Nifti to the surface of right hemisphere\n",
+    "        DR = surf.map.vol_to_surf(datafiles,surf_pial[1],surf_white[1])\n",
+    "\n",
+    "        D = np.concatenate([np.mean(DL, axis=1), np.mean(DR, axis=1)])\n",
+    "\n",
+    "        all_data.append(D)\n",
+    "        scalar_labels.append(f's{sn}_{cond}_beta')\n",
+    "\n",
+    "# make BrainModelAxis:\n",
+    "n_vertices_left = len(DL)\n",
+    "n_vertices_right = len(DR)\n",
+    "\n",
+    "# Create a boolean mask for the left hemisphere (all True)\n",
+    "mask_left = np.ones(n_vertices_left, dtype=bool)\n",
+    "bm_left = nb.cifti2.BrainModelAxis.from_mask(mask_left, name='CIFTI_STRUCTURE_CORTEX_LEFT')\n",
+    "\n",
+    "# Create a boolean mask for the right hemisphere (all True)\n",
+    "mask_right = np.ones(n_vertices_right, dtype=bool)\n",
+    "bm_right = nb.cifti2.BrainModelAxis.from_mask(mask_right, name='CIFTI_STRUCTURE_CORTEX_RIGHT')\n",
+    "\n",
+    "# Combine the left and right axes\n",
+    "combined_axis = bm_left + bm_right\n",
+    "\n",
+    "# stack all data into a single array\n",
+    "final_data_array = np.vstack(all_data)\n",
+    "\n",
+    "# Create the scalar axis from your list of all labels\n",
+    "scalar_axis = nb.cifti2.ScalarAxis(scalar_labels)\n",
+    "\n",
+    "# group level t-statistics:\n",
+    "combined_data = final_data_array\n",
+    "for cond in conds:\n",
+    "    idx = [i for i, label in enumerate(scalar_labels) if cond in label]\n",
+    "    # Extract the data for the current condition\n",
+    "    condition_data = final_data_array[idx, :]\n",
+    "\n",
+    "    mean_data = np.nanmean(condition_data, axis=0, keepdims=True)\n",
+    "    std_data = np.nanstd(condition_data, axis=0, keepdims=True, ddof=1)\n",
+    "    DoF = np.sum(~np.isnan(condition_data), axis=0, keepdims=True) - 1\n",
+    "    tstats = mean_data / (std_data / np.sqrt(DoF+1))\n",
+    "    tstats[~np.isfinite(tstats)] = np.nan # handle voxels with no data\n",
+    "\n",
+    "    # add to the data:\n",
+    "    combined_data = np.concatenate([combined_data, mean_data, tstats, DoF], axis=0)\n",
+    "\n",
+    "    # update the scalar axis:\n",
+    "    scalar_axis = scalar_axis + nb.cifti2.cifti2_axes.ScalarAxis(name=[f'mean_beta_{cond}'])\n",
+    "    scalar_axis = scalar_axis + nb.cifti2.cifti2_axes.ScalarAxis(name=[f'tstat_{cond}'])\n",
+    "    scalar_axis = scalar_axis + nb.cifti2.cifti2_axes.ScalarAxis(name=[f'DoF_{cond}'])\n",
+    "\n",
+    "# Create the full CIFTI header\n",
+    "header = nb.cifti2.Cifti2Header.from_axes([scalar_axis, combined_axis])\n",
+    "\n",
+    "# Create the Cifti2Image object\n",
+    "cifti_img = nb.cifti2.Cifti2Image(combined_data, header)\n",
+    "\n",
+    "nb.save(cifti_img, os.path.join(analysisDir, f'tmaps.dscalar.nii'))\n",
+    "\n",
     "\n"
    ]
   },
