--- a/notebooks_glmsingle/view_searchlight.ipynb
+++ b/notebooks_glmsingle/view_searchlight.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a0c22f95",
    "metadata": {},
    "outputs": [],
@@ -429,8 +429,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "glm = 'single'\n",
     "participants = [101,102,103,104,106,107,108,109,110,111,112,113,114,115]\n",
-    "searchlight_names = ['lhand','rhand','bi','mvpa_lhand', 'mvpa_rhand', 'mvpa_bi']\n",
+    "searchlight_names = ['lhand','rhand','bi','mvpa_lhand', 'mvpa_rhand', 'mvpa_bi', 'lhand_marginal', 'rhand_marginal']\n",
     "\n",
     "borders = {'L': '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border',\n",
     "           'R': '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border'}\n",
