--- a/notebooks_glmsingle/view_searchlight.ipynb
+++ b/notebooks_glmsingle/view_searchlight.ipynb
@@ -424,22 +424,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5009b2f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "glm = 'single'\n",
     "participants = [101,102,103,104,106,107,108,109,110,111,112,113,114,115]\n",
-    "searchlight_names = ['lhand','rhand','bi','mvpa_lhand', 'mvpa_rhand', 'mvpa_bi', 'lhand_marginal', 'rhand_marginal']\n",
+    "searchlight_names = ['lhand','rhand','bi','mvpa_lhand', 'mvpa_rhand', 'mvpa_bi', 'marginal_lhand', 'marginal_rhand']\n",
     "\n",
     "borders = {'L': '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_L/fs_LR.32k.L.border',\n",
     "           'R': '/Users/aghavamp/Desktop/Projects/surfAnalysisPy/standard_mesh/fs_R/fs_LR.32k.R.border'}\n",
     "\n",
     "for _, sn in enumerate(participants):\n",
     "    for searchlight_name in searchlight_names: \n",
-    "        left_img = nb.load(os.path.join(baseDir, 'searchlight', f'{searchlight_name}_s{sn}_L_cortex.dscalar.nii'))\n",
-    "        right_img = nb.load(os.path.join(baseDir, 'searchlight', f'{searchlight_name}_s{sn}_R_cortex.dscalar.nii'))\n",
+    "        left_img = nb.load(os.path.join(baseDir, 'searchlight', f'glm{glm}_{searchlight_name}_s{sn}_L_cortex.dscalar.nii'))\n",
+    "        right_img = nb.load(os.path.join(baseDir, 'searchlight', f'glm{glm}_{searchlight_name}_s{sn}_R_cortex.dscalar.nii'))\n",
     "\n",
     "        # Get axes - for dscalar: axis 0 is ScalarAxis, axis 1 is BrainModelAxes\n",
     "        left_scalar_axis = left_img.header.get_axis(0)  # ScalarAxis\n",
@@ -471,7 +471,7 @@
     "        new_img = cifti2.Cifti2Image(combined_data, new_header)\n",
     "        \n",
     "        # Save\n",
-    "        nb.save(new_img, os.path.join(baseDir, 'searchlight', f'{searchlight_name}_s{sn}_cortex.dscalar.nii'))\n",
+    "        nb.save(new_img, os.path.join(baseDir, 'searchlight', f'glm{glm}_{searchlight_name}_s{sn}_cortex.dscalar.nii'))\n",
     "\n"
    ]
   },
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ca66579b",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_52981/3372544675.py:48: RuntimeWarning: divide by zero encountered in divide\n",
+      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_40501/2283901029.py:48: RuntimeWarning: divide by zero encountered in divide\n",
       "  tstats = mean_data / (std_data / np.sqrt(DoF+1))\n"
      ]
     },
@@ -544,8 +544,8 @@
     "for searchlight_name in searchlight_names: \n",
     "    subj_files = []\n",
     "    for _, sn in enumerate(participants):\n",
-    "        subj_files.append(os.path.join(baseDir, 'searchlight', f'{searchlight_name}_s{sn}_cortex.dscalar.nii'))\n",
-    "    \n",
+    "        subj_files.append(os.path.join(baseDir, 'searchlight', f'glm{glm}_{searchlight_name}_s{sn}_cortex.dscalar.nii'))\n",
+    "\n",
     "    # Load all subject files\n",
     "    subj_imgs = [nb.load(f) for f in subj_files]\n",
     "\n",
