--- a/notebooks_glmsingle/tmaps.ipynb
+++ b/notebooks_glmsingle/tmaps.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "b5e07f76",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "51ec8d7a",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_40086/1556889967.py:65: RuntimeWarning: Mean of empty slice\n",
+      "Exception ignored in: <function ArrayProxy.__del__ at 0x32eac7e20>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/aghavamp/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/nibabel/arrayproxy.py\", line 237, in __del__\n",
+      "    def __del__(self):\n",
+      "\n",
+      "KeyboardInterrupt: \n",
+      "/var/folders/sc/kmc7_9gn2hqd_lrnhdt_2s580000gn/T/ipykernel_57538/1556889967.py:65: RuntimeWarning: Mean of empty slice\n",
       "  mean_data = np.nanmean(condition_data, axis=0, keepdims=True)\n",
       "/Users/aghavamp/Desktop/Projects/bimanual_wrist/.conda/lib/python3.11/site-packages/numpy/lib/_nanfunctions_impl.py:2019: RuntimeWarning: Degrees of freedom <= 0 for slice.\n",
       "  var = nanvar(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n"
