--- a/notebooks_mri/extract_data.ipynb
+++ b/notebooks_mri/extract_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0e08fef6",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "74e21717",
    "metadata": {},
    "outputs": [
@@ -303,6 +303,7 @@
     "region_labels = [1, 2, 3, 4, 5, 6, 7, 8]\n",
     "region_names = ['S1', 'M1', 'PMd', 'PMv', 'SMA', 'V1', 'SPLa', 'SPLp']\n",
     "sn_list = [101,102,103,104,106,107,108,109,110,111,112,113,114,115]\n",
+    "# sn_list = [110]\n",
     "hem = ['L','R']\n",
     "atlas,_ = am.get_atlas('fs32k')\n",
     "\n",
